--- a/chezmoi/dot_config/btop/btop.conf
+++ b/chezmoi/dot_config/btop/btop.conf
@@ -2,7 +2,7 @@
 
 #* Name of a btop++/bpytop/bashtop formatted ".theme" file, "Default" and "TTY" for builtin themes.
 #* Themes should be placed in "../share/btop/themes" relative to binary or "$HOME/.config/btop/themes"
-color_theme = "Default"
+color_theme = "/usr/share/btop/themes/dracula.theme"
 
 #* If the theme set background should be shown, set to False if you want terminal background transparency.
 theme_background = true
@@ -22,10 +22,10 @@ presets = "cpu:1:default,proc:0:default cpu:0:default,mem:0:default,net:0:defaul
 
 #* Set to True to enable "h,j,k,l,g,G" keys for directional control in lists.
 #* Conflicting keys for h:"help" and k:"kill" is accessible while holding shift.
-vim_keys = false
+vim_keys = true
 
 #* Rounded corners on boxes, is ignored if TTY mode is ON.
-rounded_corners = true
+rounded_corners = false
 
 #* Use terminal synchronized output sequences to reduce flickering on supported terminals.
 terminal_sync = true
