--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -14,6 +14,18 @@
         update_cache: true
         upgrade: true
 
+    - name: Install yay dependencies
+      become: true
+      community.general.pacman:
+        name:
+          - base-devel
+          - git
+
+    - name: Install yay
+      kewlfft.aur.aur:
+        name: yay
+        use: makepkg
+
     - name: Install development environment
       become: true
       kewlfft.aur.aur:
