hmm maybe we need to be elevated?

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -15,11 +15,13 @@
         upgrade: true
 
     - name: Install development environment
+      become: true
       kewlfft.aur.aur:
         use: yay
         name: "{{ dev_env }}"
 
     - name: Install language tools
+      become: true
       kewlfft.aur.aur:
         use: yay
         name: "{{ lang_tools }}"
