update git diff conf

--- a/chezmoi/dot_config/lazygit/config.yml
+++ b/chezmoi/dot_config/lazygit/config.yml
@@ -1,5 +1,9 @@
 promptToReturnFromSubprocess: false
 
+git:
+  pagers:
+    - pager: delta --paging=never
+
 gui:
   # Nerd fonts version to use.
   # One of: '2' | '3' | empty string (default)
