--- a/chezmoi/dot_config/btop/btop.conf
+++ b/chezmoi/dot_config/btop/btop.conf
@@ -53,7 +53,7 @@ graph_symbol_net = "default"
 graph_symbol_proc = "default"
 
 #* Manually set which boxes to show. Available values are "cpu mem net proc" and "gpu0" through "gpu5", separate values with whitespace.
-shown_boxes = "cpu mem net proc"
+shown_boxes = "cpu mem proc"
 
 #* Update time in milliseconds, recommended 2000 ms or above for better sample times for graphs.
 update_ms = 2000
@@ -107,7 +107,7 @@ cpu_graph_upper = "Auto"
 cpu_graph_lower = "Auto"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
-show_gpu_info = "Auto"
+show_gpu_info = "Off"
 
 #* Toggles if the lower CPU graph should be inverted.
 cpu_invert_lower = true
